# Info-Web

./: LICENSE  README.md  build.sh  render.yaml
InfoWeb/: manage.py
InfoWeb/InfoWeb/: asgi.py  settings.py  urls.py  wsgi.py
InfoWeb/staff/: admin.py  apps.py  decorators.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
InfoWeb/staff/tests/: __init__.py  test_URLs.py  test_view.py
InfoWeb/static/css/custom/: main.css
InfoWeb/static/js/custom/: cart.js
InfoWeb/templates/: base.html
InfoWeb/templates/staff/: dashboard.html  index.html  link_profile.html  login.html  nominal_roll.html  register.html
infoweb/: manage.py  pyproject.toml  render.yml  requirements.txt
infoweb/infoweb/: asgi.py  settings.py  urls.py  wsgi.py
infoweb/staff/: admin.py  decorators.py  forms.py  models.py  urls.py  utils.py  views.py
infoweb/staff/new_views/: friom_dashboard.py  from_dashboard2.py  views1.py
infoweb/static/: infoweb-ER-model.mwb
infoweb/templates/: base.html
infoweb/templates/new_mockups/: grid.css  grid.html  login.html
infoweb/templates/staff/: dashboard.html  index.html  link_account.html  login.html  register.html
