[tool.poetry]
name = "infoweb"
version = "0.1.0"
description = ""
authors = ["SimpleNiQue <simplenick01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
pillow = "^9.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
